Refactor: simplify code and improve maintainability in SVG-related classes
- Consolidated formatting across methods and records for consistent readability.
- Replaced redundant null checks with `emptyList` for improved safety.
- Applied `@NullMarked` annotations across packages to align with stricter null-safety guidelines.
- Utilized inline formatting for concise, standardized code blocks.
- Enhanced usability in SVG rendering logic by streamlining method and parameter structures.